Fix fixed position jumping on Android

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -7,7 +7,9 @@
   left: 0;
   padding: 0;
   z-index: (@zindex-modal + 1);
-  transform: translateZ(0); // Prevent jumping on Android
+  transform: translate3d(0, 0, 0); // Prevent jumping on Android
+  backface-visibility: hidden; // Prevent jumping on Android
+  will-change: transform; // Prevent jumping on Android
   color: @white-color;
   background-color: rgba(@ku-cookiebox-bg, .96);
   overflow-y: scroll;
